# robot33

./: .gitignore  Dockerfile  Makefile  README.md  app.toml  example.app.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: codeql.yml  lint.yml  test.yml
ci/: ci.app.toml
depends/: docker-compose.yml
robot33/: config.py  logging.py  main.py
robot33/dependencies/: error_handler.py  events.py  security.py
robot33/internal/db/: database.py  db.py  document_dao.py
robot33/internal/model/: base.py  document.py  user.py
robot33/internal/schema/: common.py  errors.py  response.py
robot33/internal/service/: ai.py
robot33/routers/: root.py  routers.py
robot33/routers/v1/: ai.py  application.py  documents.py  users.py
tests/: conftest.py  test_main.py
tests/internal/db/: test_document_dao.py
tests/internal/schema/: test_response.py
tests/routers/: test_root.py
tests/routers/v1/: test_ai.py  test_application.py  test_documents.py
