[tool.poetry]
name = "robot33"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["axiangcoding <axiangcoding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.3"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
python-multipart = "^0.0.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pymongo = "^4.7.0"
loguru = "^0.7.2"
langchain = "^0.1.5"
langchain-community = "^0.0.20"
openai = "^1.35.5"
qianfan = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
ruff = "0.4.4"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = ["I", "N", "UP"]
